--- a/HRStore/views/supplier_orderlist.xml
+++ b/HRStore/views/supplier_orderlist.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <odoo>
-     <template id="supplier_orderlist" name="supplier_orderlist">
+    <template id="supplier_orderlist" name="supplier_orderlist">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
             <t t-call-assets="HRStore.my_custom_assets" tcss="false"/>
         </head>
 
-    <body class="body-wrapper">
+        <body class="body-wrapper">
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <nav class="navbar navbar-expand-lg  navigation">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -69,31 +69,31 @@
                                     </t>
                                 </div>
                             </nav>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!--==================================
-    =          供货商查看待审核          =
-    ===================================-->
-    <section class="dashboard section">
-	    <!-- Container Start -->
-	    <div class="container">
-		    <!-- Row Start -->
-		    <div class="row">
-			    <div class="col-md-10 offset-md-1 col-lg-4 offset-lg-0">
-				    <div class="sidebar">
-					    <!-- User Widget -->
-					    <div class="widget user-dashboard-profile">
-						    <!-- User Image -->
-    						<t t-if="supplier">
+            </section>
+            <!--==================================
+            =          供货商查看待审核          =
+            ===================================-->
+            <section class="dashboard section">
+                <!-- Container Start -->
+                <div class="container">
+                    <!-- Row Start -->
+                    <div class="row">
+                        <div class="col-md-10 offset-md-1 col-lg-4 offset-lg-0">
+                            <div class="sidebar">
+                                <!-- User Widget -->
+                                <div class="widget user-dashboard-profile">
+                                    <!-- User Image -->
+                                    <t t-if="supplier">
                                         <div class="profile-thumb">
                                             <span t-field="supplier.user_image"
                                                   t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
                                         </div>
                                         <!-- User Name -->
                                         <h5 class="text-center">
-                                            <span id="username" t-esc="supplier.user_id"></span>
+                                            <span id="username" t-esc="supplier.shopname"></span>
                                         </h5>
                                         <p>
                                             <span id="u-tel" style="word-wrap:break-word;"
@@ -105,97 +105,123 @@
                                         </p>
                                     </t>
                                     <a href="/supplier_updateInfo" class="btn btn-main-sm">编辑</a>
-					    </div>
-					<!-- Dashboard Links -->
-					    <div class="widget user-dashboard-menu">
-                            <ul>
-                                <li><a href="/supplier_addProduct"> 发布商品</a></li>
-                                <li><a href="/supplier_changeStatus"> 待审核</a></li>
-                                <li><a href="/supplier_publishedProduct"> 已发布</a></li>
-                                <li class="active"><a href="/supplier_orderlist"> 订单</a></li>
-                                <li><a href="/login">退出登录</a></li>
-                            </ul>
+                                </div>
+                                <!-- Dashboard Links -->
+                                <div class="widget user-dashboard-menu">
+                                    <ul>
+                                        <li>
+                                            <a href="/supplier_addProduct">发布商品</a>
+                                        </li>
+                                        <li>
+                                            <a href="/supplier_changeStatus">待审核</a>
+                                        </li>
+                                        <li>
+                                            <a href="/supplier_publishedProduct">已发布</a>
+                                        </li>
+                                        <li class="active">
+                                            <a href="/supplier_orderlist">订单</a>
+                                        </li>
+                                        <li>
+                                            <a href="/login">退出登录</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-				    </div>
-			    </div>
-                <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-0">
-                <!-- Recently Favorited -->
-                <div class="widget dashboard-container my-adslist">
-                    <h3 class="widget-header">订单</h3>
-                        <table class="table table-responsive product-dashboard-table">
-                        <thead>
-                            <tr>
-                                <th >订购人</th>
-                                <th>产品信息</th>
-                                <th class="text-center">预定时间</th>
-                                <th class="text-center">状态</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr t-foreach="orders" t-as="order">
-                                <td class="product-thumb"><span id="order_id" t-esc="order[0]" /></td>
-                                <td class="product-details">
-                                    <h3 class="title" t-esc="order[1]"/>
-                                    <span id="price"><strong>价格: </strong><p t-esc="order[2]"/> </span>
-                                    <span id="price" style="margin-bottom:10px;"><strong>类别: </strong>
-                                        <t t-if="order[3] == '1'">
-                                            <p>活动策划</p>
-                                        </t>
-                                        <t t-if="order[3] == '2'">
-                                            <p>培训产品</p>
-                                        </t>
-                                        <t t-if="order[3] == '3'">
-                                            <p>精美商品</p>
-                                        </t>
-                                        <t t-if="order[3] == '4'">
-                                            <p>法律服务</p>
-                                        </t>
-                                    </span>
-                                    <form action="product_detail">
-                                        <input name="product_id" type="hidden" t-att-value="order[4]"/>
-                                        <button class="btn btn-outline-info">查看商品详细信息</button>
-                                    </form>
-                                </td>
-                                <td class="product-category"><span id="date" class="categories" t-esc="order[5]"></span></td>
-                                <td class="product-category">
-                                    <t t-if="order[6] == '0'">
-                                        <span id="status">待处理</span>
-                                    </t>
-                                    <t t-if="order[6] == '1'">
-                                        <span id="status">已完成</span>
-                                    </t>
-                                </td>
-                                <t t-if="order[6] == '0'">
-                                    <td class="product-category">
-                                    <form action="/ChangeOrder">
-                                        <input name="order_id" type="hidden" t-att-value="order[7]"/>
-                                        <button class="btn btn-outline-success">修改状态</button>
-                                    </form>
-                                    </td>
-                                </t>
-                            </tr>
-                        </tbody>
-                        </table>
-                    </div>
-                </div>
-		    </div>
-		    <!-- Row End -->
-	    </div>
-	    <!-- Container End -->
-    </section>
-<!--============================
-=            Footer            =
-=============================-->
+                        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-0">
+                            <!-- Recently Favorited -->
+                            <div class="widget dashboard-container my-adslist">
+                                <h3 class="widget-header">订单</h3>
+                                <table class="table table-responsive product-dashboard-table">
+                                    <thead>
+                                        <tr>
+                                            <th>订购人</th>
+                                            <th>产品信息</th>
+                                            <th>预定时间</th>
+                                            <th>状态</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr t-foreach="orders" t-as="order">
+                                            <td class="product-thumb text-center">
+                                                <span id="order_id" t-esc="order[0]"/>
+                                            </td>
+                                            <td>
+                                                <span id="name">
+                                                    <form action="product_detail">
+                                                        <input name="product_id" type="hidden" t-att-value="order[4]"/>
+                                                        <button type="submit" class="btn btn-link" style="color:black">
+                                                            <h5 t-esc="order[1]"/>
+                                                        </button>
+                                                    </form>
+                                                </span>
+                                                <br/>
+                                                <span id="price">
+                                                    <span>价格:</span>
+                                                    <label t-esc="order[2]"/>
+                                                </span>
+                                                <br/>
+                                                <span id="price">
+                                                    <span>类别:</span>
+                                                    <t t-if="order[3] == '1'">
+                                                        <label>活动策划</label>
+                                                    </t>
+                                                    <t t-if="order[3] == '2'">
+                                                        <label>培训产品</label>
+                                                    </t>
+                                                    <t t-if="order[3] == '3'">
+                                                        <label>精美商品</label>
+                                                    </t>
+                                                    <t t-if="order[3] == '4'">
+                                                        <label>法律服务</label>
+                                                    </t>
+                                                </span>
+                                                <span id="">
 
-<!--============================
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span id="date" class="categories" t-esc="order[5]"></span>
+                                            </td>
+                                            <td>
+                                                <t t-if="order[6] == '0'">
+                                                    <span id="status">待处理</span>
+                                                </t>
+                                                <t t-if="order[6] == '1'">
+                                                    <span id="status">已完成</span>
+                                                </t>
+                                            </td>
+                                            <t t-if="order[6] == '0'">
+                                                <td>
+                                                    <form action="/ChangeOrder">
+                                                        <input name="order_id" type="hidden" t-att-value="order[7]"/>
+                                                        <button class="btn btn-outline-success btn-sm">通过</button>
+                                                    </form>
+                                                </td>
+                                            </t>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Row End -->
+                </div>
+                <!-- Container End -->
+            </section>
+            <!--============================
             =            Footer            =
             =============================-->
+
+            <!--============================
+                        =            Footer            =
+                        =============================-->
             <footer class="footer section section-sm">
                 <!-- Container Start -->
                 <div class="container">
                     <div class="row offset-md-1 offset-lg-0 block about">
-                        <img src="\HRStore\static\src\images\logo.jpg" height="100" width="200" />
+                        <img src="\HRStore\static\src\images\logo.jpg" height="100" width="200"/>
                         <div class="footer-text">
                         </div>
                         <ul>
@@ -221,18 +247,20 @@
                 <!-- Container End -->
             </footer>
             <!-- Footer Bottom -->
-    <footer class="footer-bottom">
-        <!-- Container Start -->
-        <div class="container">
-            <p type="center">Copyright © 2019.7-现在 HR商城 版权所有</p>
-        </div>
-        <!-- Container End -->
-        <!-- To Top -->
-        <div class="top-to">
-            <a id="top" class="" href=""><i class="fa fa-angle-up"></i></a>
-        </div>
-    </footer>
+            <footer class="footer-bottom">
+                <!-- Container Start -->
+                <div class="container">
+                    <p type="center">Copyright © 2019.7-现在 HR商城 版权所有</p>
+                </div>
+                <!-- Container End -->
+                <!-- To Top -->
+                <div class="top-to">
+                    <a id="top" class="" href="">
+                        <i class="fa fa-angle-up"></i>
+                    </a>
+                </div>
+            </footer>
 
-    </body>
-     </template>
+        </body>
+    </template>
 </odoo>
